--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="favicon.svg" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Paint, but with AI!"/>
+  <meta name="description" content="Paint, but with AI!" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@modal_labs" />
@@ -19,6 +19,14 @@
   <title>Turbo.Art</title>
   <script>
     window.INFERENCE_BASE_URL = "{{ inference_url }}";
+  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPLYYHSBTL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-RPLYYHSBTL');
   </script>
 </head>
 
