Rebrand turbo art

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="Paint, but with AI!" />
   <meta property="og:url" content="turbo.art" />
   <meta property="og:image" content="https://turbo.art/preview.png" />
-
+  <link rel="stylesheet" href="https://use.typekit.net/jcd8ppx.css" />
   <title>Turbo.Art</title>
   <script>
     window.INFERENCE_BASE_URL = "{{ inference_url }}";
